fixed search button align ie9

--- a/wp-content/themes/tmr/style.css
+++ b/wp-content/themes/tmr/style.css
@@ -380,7 +380,7 @@ body.home #searchsubmit {
 }
 
 body.home input#s.field {
-	width: 198px;
+	width: 193px;
 }
 
 /* 1) Remove default scrollbar in IE: www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/
